k8s_deployment/upf.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    version: v1.0.0
  labels:
    app: free5gc
    nf: upf
    io.service: upf
  name: upf-nupf
  namespace: free5gc
spec:
  ports:
    - name: "upf-nupf"
      protocol: UDP
      port: 8805 # PFCP control plane port
      targetPort: 8805
    - name: "gtpu"
      protocol: UDP
      port: 2152 # GTP-U user plane port
      targetPort: 2152
  selector:
    app: free5gc
    nf: upf
    io.service: upf
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    version: v1.0.0
  labels:
    app: free5gc
    nf: upf
    io.service: upf
  name: upf
  namespace: free5gc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: free5gc
      nf: upf
      io.service: upf
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        version: v1.0.0
      labels:
        app: free5gc
        nf: upf
        io.service: upf
    spec:
      containers:
        - args:
            - bash
            - -c
            - cp /free5gc/upf-iptables.sh /tmp/upf-iptables.sh && chmod +x /tmp/upf-iptables.sh && //tmp/upf-iptables.sh && ./upf -c /free5gc/config/upfcfg.yaml
            # - ./upf-iptables.sh && ./upf -c ./config/upfcfg.yaml
          image: free5gc/upf:latest
          name: upf
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          ports:
            - containerPort: 8805
              protocol: UDP
            - containerPort: 2152
              protocol: UDP
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
          volumeMounts:
            - mountPath: /free5gc/config/upfcfg.yaml
              name: upf-cm0
              subPath: upfcfg.yaml
            - mountPath: /free5gc/upf-iptables.sh
              name: upf-cm1
              subPath: upf-iptables.sh
      restartPolicy: Always
      volumes:
        - configMap:
            items:
              - key: upfcfg.yaml
                path: upfcfg.yaml
            name: upf-cm0
          name: upf-cm0
        - configMap:
            items:
              - key: upf-iptables.sh
                path: upf-iptables.sh
            name: upf-cm1
          name: upf-cm1
